added base of navbar

--- a/webapp/src/app.html
+++ b/webapp/src/app.html
@@ -7,7 +7,7 @@
 
 		%svelte.head%
 	</head>
-	<body>
+	<body style='background: #0B0D11'>
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
