added snackbar for quick message alerts

--- a/webapp/src/app.html
+++ b/webapp/src/app.html
@@ -9,7 +9,7 @@
 
 		%svelte.head%
 	</head>
-	<body style='background: #0B0D11'>
+	<body style='background: #0B0D11; overflow: hidden'>
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
